--- a/band/template.html
+++ b/band/template.html
@@ -80,11 +80,13 @@
         </main>
         <footer>
 			<div class="footerWrapper">
-				<aside><a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
+				<div class="footer_fb">
+					<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
 					<!-- <img src="FB-logo.png" class="socialMedia" alt="Facebook" /> -->
 					Facebook
-				</a></aside>
-				<section>
+					</a>
+				</div>
+				<div class="footer_siteInfo">
 					<p class="bandInfo">
 						<span id="bandWebsite">website</span>
 						<span id="bandEmail">email</span>
@@ -108,13 +110,13 @@
 						</span>
 					</p>
 					
-				</section>
-				<aside>
+				</div>
+				<div class="footer_twitter">
 					<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
 						<!-- <img src="twitter-logo.png" class="socialMedia" alt="twitter" /> -->
 						Twitter
 					</a>
-				</aside>
+				</div>
 			</div>
         </footer>
     </div>
