--- a/band/template.html
+++ b/band/template.html
@@ -78,8 +78,7 @@
                 <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
             </section>
         </main>
-        <footer>
-			<div class="footerWrapper">
+        <footer class="footerWrapper">
 				<div class="footer_fb">
 					<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
 					<!-- <img src="FB-logo.png" class="socialMedia" alt="Facebook" /> -->
@@ -117,7 +116,6 @@
 						Twitter
 					</a>
 				</div>
-			</div>
         </footer>
     </div>
 </body>
