--- a/band/template.html
+++ b/band/template.html
@@ -19,8 +19,10 @@
 <body>
     <div class="wrapper">
         <header>
-			<a href="template.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a>
-            <h1 class="batala">Batala Bangor</h1>
+			<div class="header_wrapper"
+				<a href="template.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a>
+            	<h1 class="batala">Batala Bangor</h1>
+			</div>
             <nav>
                 <ul>
                     <li><a href="about.html" class="this-page">career background</a></li>
