--- a/band/template.html
+++ b/band/template.html
@@ -19,7 +19,7 @@
 <body>
     <div class="wrapper">
         <header>
-			<div class="header_wrapper"
+			<div class="header_wrapper">
 				<a href="template.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a>
             	<h1 class="batala">Batala Bangor</h1>
 			</div>
