--- a/band/template.html
+++ b/band/template.html
@@ -20,7 +20,7 @@
     <div class="wrapper">
         <header>
 			<div class="header_wrapper">
-				<a href="template.html"><img src="img/logo.png" class="logo" alt="Band Logo" /></a>
+				<img src="img/logo.png" class="logo" alt="Band Logo" />
             	<h1 class="batala">Batala Bangor</h1>
 			</div>
             <nav>
