--- a/band/template.html
+++ b/band/template.html
@@ -20,7 +20,9 @@
     <div class="wrapper">
         <header>
 			<div class="header_wrapper">
-				<img src="img/logo.png" class="logo" alt="Band Logo" />
+				<section class="logo">
+					<img src="img/logo.png" alt="Band Logo" />
+				</section>
             	<h1 class="batala">Batala Bangor</h1>
 			</div>
             <nav>
