--- a/band/template.html
+++ b/band/template.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BB</title>
-
-    <meta name="Author" content="Chrs Wilton">
+	<title>BB</title>
+	<meta name="Author" content="Chrs Wilton">
 	<meta name="Description" content="Software Developer in Gwynedd, North Wales">
 	<meta name="keywords" content="Software Developer, Software Engineer,
                 Java, Html, Swift, Bangor, Gwynedd, North Wales">
 	<meta charset="UTF-8"> <!-- <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> is equivalent, but longer -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+	
 	<link href="css/layout.css" rel="stylesheet" type="text/css" />
-
+	
 	<!-- - - - - - - - - - insert logo in browser tab - - - - - - - - - -->
 	<link rel="icon" href="img/logo.png" />
 	
 </head>
 <body>
     <div class="wrapper">
-        <header>
-			<div class="header_wrapper">
-				<section class="logo">
+	    <header>
+		    <section class="header_wrapper">
+			    <aside class="logo">
 					<img src="img/logo.png" alt="Band Logo" />
-				</section>
+				</aside>
             	<h1 class="batala">Batala Bangor</h1>
-			</div>
+			</section>
             <nav>
                 <ul>
                     <li><a href="about.html" class="this-page">career background</a></li>
