--- a/band/template.html
+++ b/band/template.html
@@ -84,7 +84,7 @@
         <footer class="footerWrapper">
 				<div class="footer_fb">
 					<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
-					<!-- <img src="FB-logo.png" class="socialMedia" alt="Facebook" /> -->
+					<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
 					Facebook
 					</a>
 				</div>
