--- a/band/template.html
+++ b/band/template.html
@@ -84,8 +84,7 @@
         <footer class="footerWrapper">
 				<div class="footer_fb">
 					<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
-					<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
-					Facebook
+						<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
 					</a>
 				</div>
 				<div class="footer_siteInfo">
@@ -100,14 +99,12 @@
 					<p>
 						<span>
 							<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-								<!-- <img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" /> -->
-								Valid HTML
+								<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" />
 							</a>
 						</span>
 						<span>
 							<a href="http://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-								<!-- <img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" /> -->
-								Valid CSS
+								<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" />
 							</a> 	
 						</span>
 					</p>
@@ -115,8 +112,7 @@
 				</div>
 				<div class="footer_twitter">
 					<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
-						<!-- <img src="twitter-logo.png" class="socialMedia" alt="twitter" /> -->
-						Twitter
+						<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter" />
 					</a>
 				</div>
         </footer>
