--- a/band/template.html
+++ b/band/template.html
@@ -89,8 +89,12 @@
 				</div>
 				<div class="footer_siteInfo">
 					<p class="bandInfo">
-						<span id="bandWebsite">website</span>
-						<span id="bandEmail">email</span>
+						<span id="bandWebsite">
+							<a href="index.html" class="menu">www.batalabangor.com</a>
+						</span>
+						<span id="bandEmail"><!-- opens mail client -->
+							<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
+						</span>
 					</p>
 					<p class="siteInfo">
 						<span id="copyright">copyright</span>
