--- a/band/template.html
+++ b/band/template.html
@@ -80,12 +80,12 @@
             </section>
         </main>
         <footer class="footerWrapper">
-				<div class="footer_fb">
+				<aside class="footer_fb">
 					<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
 						<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
 					</a>
-				</div>
-				<div class="footer_siteInfo">
+				</aside>
+				<section class="footer_siteInfo">
 					<p class="bandInfo">
 						<span id="bandWebsite">
 							<a href="index.html" class="menu">www.batalabangor.com</a>
@@ -111,12 +111,12 @@
 						</span>
 					</p>
 					
-				</div>
-				<div class="footer_twitter">
+				</section>
+				<aside class="footer_twitter">
 					<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
 						<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter" />
 					</a>
-				</div>
+				</aside>
         </footer>
     </div>
 </body>
