--- a/band/template.html
+++ b/band/template.html
@@ -98,7 +98,7 @@
 						<span id="copyright">copyright</span>
 		                <span id="modified">modified</span>
 					</p>
-					<p>
+					<p class="siteValidation">
 						<span>
 							<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
 								<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" />
