--- a/band/template.html
+++ b/band/template.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <div class="wrapper">
-		<header>
+		<header class="flexRow flexCenter">
 			<aside class="logo">
 				<img src="img/logo.png" alt="Band Logo" />
 			</aside>
 			<h1 class="batala">Batala Bangor</h1>
         </header>
 		<nav>
-			<ul>
+			<ul class="flexRow flexCenter">
 				<li><a href="about.html" class="this-page">career background</a></li>
 				<li><a href="showcase.html">my showcase</a></li>
 				<li><a href="activities.html">my activities</a></li>
@@ -79,13 +79,13 @@
                 <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
             </section>
         </main>
-        <footer class="footerWrapper">
+        <footer class="footerWrapper flexRow flexCenter">
 				<aside class="footer_fb">
 					<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
 						<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
 					</a>
 				</aside>
-				<section class="footer_siteInfo">
+				<section class="footer_siteInfo flexColumn">
 					<p class="bandInfo">
 						<span id="bandWebsite">
 							<a href="index.html" class="menu">www.batalabangor.com</a>
