--- a/band/template.html
+++ b/band/template.html
@@ -34,7 +34,7 @@
         <main>
             <!--Main content here-->
             <section class="section1">
-                <header><h2>About Me</h2></header>
+                <header class="flexRow flexCenter"><h2>About Me</h2></header>
                 <p>Welcome! 
                     <br>My name is Chris,<!-- foaf: firstname --> 
                     I'm a Software Engineer <!-- profession: software? -->
@@ -49,7 +49,7 @@
                 </p>
             </section>
             <section class="section2">
-                <header><h2 id="backgorund">Pre-computing life</h2></header>
+                <header class="flexRow flexCenter"><h2 id="backgorund">Pre-computing life</h2></header>
                 <p>During my GCSEs and A-levels, I was never sure about what I wanted to do after school.
                     Going to University and getting student finance didn’t make sense to me when there was no overall goal to aim for.
                     After my levels A-Ievels I did a year motor vehicle before getting a job in manufacturing engineering for almost 10 years.
@@ -66,7 +66,7 @@
                     </p>
             </section>
             <section class="section2">
-                <header><h2>Turning computing into a career</h2></header>
+                <header class="flexRow flexCenter"><h2>Turning computing into a career</h2></header>
                 <p>Deciding to leave my job to pursue a career in computing with only a basic understanding of html as a background of the field was quite a daunting choice. 
                     However, an Associates Degree included a vast range of modules from Maths and English to Business and Accounting which meant should the subject major not be suitable, 
                     it allows a much easier switch to another major. 
@@ -75,7 +75,7 @@
                     </p>
             </section>
             <section class="section1">
-                <header><h2>Showcase</h2></header>
+                <header class="flexRow flexCenter"><h2>Showcase</h2></header>
                 <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
             </section>
         </main>
