--- a/band/template.html
+++ b/band/template.html
@@ -34,7 +34,7 @@
         <main>
             <!--Main content here-->
             <section class="section1">
-                <header class="flexRow flexCenter flexMiddle"><h2>About Me</h2></header>
+                <header class="flexRow flexCenter flexLeft"><h2>About Me</h2></header>
                 <p>Welcome! 
                     <br>My name is Chris,<!-- foaf: firstname --> 
                     I'm a Software Engineer <!-- profession: software? -->
