--- a/band/template.html
+++ b/band/template.html
@@ -86,7 +86,7 @@
 					</a>
 				</aside>
 				<section class="footer_siteInfo flexColumn">
-					<p class="bandInfo flexRow">
+					<p class="bandInfo flexRow flexCenter">
 						<span id="bandWebsite">
 							<a href="index.html" class="menu">www.batalabangor.com</a>
 						</span>
@@ -94,11 +94,11 @@
 							<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
 						</span>
 					</p>
-					<p class="siteInfo flexRow">
+					<p class="siteInfo flexRow flexCenter">
 						<span id="copyright">copyright</span>
 		                <span id="modified">modified</span>
 					</p>
-					<p class="siteValidation flexRow">
+					<p class="siteValidation flexRow flexCenter">
 						<span>
 							<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
 								<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" />
