--- a/band/template.html
+++ b/band/template.html
@@ -24,7 +24,7 @@
 			<h1 class="batala">Batala Bangor</h1>
         </header>
 		<nav>
-			<ul class="flexRow flexCenter">
+			<ul class="flexRow flexCenter flexMiddle">
 				<li><a href="about.html" class="this-page">career background</a></li>
 				<li><a href="showcase.html">my showcase</a></li>
 				<li><a href="activities.html">my activities</a></li>
