--- a/band/template.html
+++ b/band/template.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <div class="wrapper">
-	<header class="flexRow flexCenter flexMiddle">
+	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
 			<img src="img/logo.png" alt="Band Logo" />
 		</aside>
 		<h1 class="batala">Batala Bangor</h1>
         </header>
 	<nav>
-		<ul class="flexRow flexCenter flexMiddle">
+		<ul class="flexRow flexWrap flexCenter flexMiddle">
 			<li><a href="about.html" class="this-page">career background</a></li>
 			<li><a href="showcase.html">my showcase</a></li>
 			<li><a href="activities.html">my activities</a></li>
@@ -34,7 +34,7 @@
         <main>
             <!--Main content here-->
             <section class="section1">
-                <header class="flexRow flexMiddle"><h2>About Me</h2></header>
+                <header class="flexRow flexNowrap flexMiddle"><h2>About Me</h2></header>
                 <p>Welcome! 
                     <br>My name is Chris,<!-- foaf: firstname --> 
                     I'm a Software Engineer <!-- profession: software? -->
@@ -49,14 +49,14 @@
                 </p>
             </section>
             <section class="section2">
-                <header class="flexRow flexMiddle"><h2 id="backgorund">Pre-computing life</h2></header>
+                <header class="flexRow flexNowrap flexMiddle"><h2 id="backgorund">Pre-computing life</h2></header>
                 <p>During my GCSEs and A-levels, I was never sure about what I wanted to do after school.
                     Going to University and getting student finance didn’t make sense to me when there was no overall goal to aim for.
                     After my levels A-Ievels I did a year motor vehicle before getting a job in manufacturing engineering for almost 10 years.
                 </p>
             </section>
             <section class="section1">
-                <header class="flexRow flexMiddle"><h2>My introduction to computing</h2></header>
+                <header class="flexRow flexNowrap flexMiddle"><h2>My introduction to computing</h2></header>
                 <p>My first experience with computing languages was when I saw my yahoo account came with Geocities (Wow that’s a blast from the past, right), 
                     which allowed you to create your own webpage for no cost, so I thought I’d give it a go. 
                     I started by using the website builder, but had to use the help feature to find out a few things including how to edit the hex color of an item in the html tab. 
@@ -66,7 +66,7 @@
                     </p>
             </section>
             <section class="section2">
-                <header class="flexRow flexMiddle"><h2>Turning computing into a career</h2></header>
+                <header class="flexRow flexNowrap flexMiddle"><h2>Turning computing into a career</h2></header>
                 <p>Deciding to leave my job to pursue a career in computing with only a basic understanding of html as a background of the field was quite a daunting choice. 
                     However, an Associates Degree included a vast range of modules from Maths and English to Business and Accounting which meant should the subject major not be suitable, 
                     it allows a much easier switch to another major. 
@@ -75,18 +75,18 @@
                     </p>
             </section>
             <section class="section1">
-                <header class="flexRow flexMiddle"><h2>Showcase</h2></header>
+                <header class="flexRow flexNowrap flexMiddle"><h2>Showcase</h2></header>
                 <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
             </section>
         </main>
-        <footer class="footerWrapper flexRow flexCenter flexMiddle">
+        <footer class="footerWrapper flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="footer_fb">
 			<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
 				<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
 			</a>
 		</aside>
-		<section class="footer_siteInfo flexColumn">
-			<p class="bandInfo flexRow flexCenter">
+		<section class="footer_siteInfo flexNowrap flexColumn">
+			<p class="bandInfo flexRow flexNowrap flexCenter">
 				<span id="bandWebsite">
 					<a href="index.html" class="menu">www.batalabangor.com</a>
 				</span>
@@ -94,11 +94,11 @@
 					<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
 				</span>
 			</p>
-			<p class="siteInfo flexRow flexCenter">
+			<p class="siteInfo flexRow flexNowrap flexCenter">
 				<span id="copyright">copyright</span>
 				<span id="modified">modified</span>
 			</p>
-			<p class="siteValidation flexRow flexCenter">
+			<p class="siteValidation flexRow flexNowrap flexCenter">
 				<span>
 					<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
 						<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" />
