--- a/band/template.html
+++ b/band/template.html
@@ -25,16 +25,16 @@
         </header>
 	<nav>
 		<ul class="flexRow flexWrap flexCenter flexMiddle">
-			<li><a href="about.html" class="this-page">career background</a></li>
-			<li><a href="showcase.html">my showcase</a></li>
-			<li><a href="activities.html">my activities</a></li>
-			<li><a href="music.html">music background</a></li>
+			<li><a href="#" class="this-page">page1</a></li>
+			<li><a href="#">page2</a></li>
+			<li><a href="#">page3</a></li>
+			<li><a href="#">page4</a></li>
 		</ul>
 	</nav>
         <main>
             <!--Main content here-->
             <section class="section1">
-                <header class="flexRow flexNowrap flexMiddle"><h2>About Me</h2></header>
+                <header class="flexRow flexNowrap flexMiddle"><h2>Section1</h2></header>
                 <p>Welcome! 
                     <br>My name is Chris,<!-- foaf: firstname --> 
                     I'm a Software Engineer <!-- profession: software? -->
@@ -49,34 +49,20 @@
                 </p>
             </section>
             <section class="section2">
-                <header class="flexRow flexNowrap flexMiddle"><h2 id="backgorund">Pre-computing life</h2></header>
-                <p>During my GCSEs and A-levels, I was never sure about what I wanted to do after school.
-                    Going to University and getting student finance didn’t make sense to me when there was no overall goal to aim for.
-                    After my levels A-Ievels I did a year motor vehicle before getting a job in manufacturing engineering for almost 10 years.
-                </p>
+                <header class="flexRow flexNowrap flexMiddle"><h2 id="backgorund">section2</h2></header>
+                <p>section2</p>
             </section>
             <section class="section1">
-                <header class="flexRow flexNowrap flexMiddle"><h2>My introduction to computing</h2></header>
-                <p>My first experience with computing languages was when I saw my yahoo account came with Geocities (Wow that’s a blast from the past, right), 
-                    which allowed you to create your own webpage for no cost, so I thought I’d give it a go. 
-                    I started by using the website builder, but had to use the help feature to find out a few things including how to edit the hex color of an item in the html tab. 
-                    Whilst doing that, I realized that the code created to build the website seemed to make sense.
-                    It was around this time when I had started Batala Batala (link to the <a href="http://www.batalabangor.com" target="_blank">band's website</a>) which didn’t have a website. 
-                    So I thought I would learn more about html using geocities help and quackit tutorials and try to create one.
-                    </p>
+                <header class="flexRow flexNowrap flexMiddle"><h2>section3</h2></header>
+                <p>section3</p>
             </section>
             <section class="section2">
-                <header class="flexRow flexNowrap flexMiddle"><h2>Turning computing into a career</h2></header>
-                <p>Deciding to leave my job to pursue a career in computing with only a basic understanding of html as a background of the field was quite a daunting choice. 
-                    However, an Associates Degree included a vast range of modules from Maths and English to Business and Accounting which meant should the subject major not be suitable, 
-                    it allows a much easier switch to another major. 
-                    So I decided started an Associates Degree and found that I was suited to the field of computing and then transferred to the University of Liverpool to do a BSc in software development which I graduated with a first-class honors.
-                    I am now continuing my studies to do a MSc in Computing.
-                    </p>
+                <header class="flexRow flexNowrap flexMiddle"><h2>section4</h2></header>
+                <p>section4</p>
             </section>
             <section class="section1">
-                <header class="flexRow flexNowrap flexMiddle"><h2>Showcase</h2></header>
-                <p>To see some samples of my work, go to the <a href="showcase.html">showcase page</a>.</p>
+                <header class="flexRow flexNowrap flexMiddle"><h2>section5</h2></header>
+                <p>section5</p>
             </section>
         </main>
         <footer class="footerWrapper flexRow flexNowrap flexCenter flexMiddle">
