--- a/band/template.html
+++ b/band/template.html
@@ -10,9 +10,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<link href="css/layout.css" rel="stylesheet" type="text/css" />
-	
-	<!-- - - - - - - - - - insert logo in browser tab - - - - - - - - - -->
-	<link rel="icon" href="img/logo.png" />
+	<link rel="icon" href="img/logo.png" /> <!-- - - - insert logo in browser tab - - - -->
+
+	<script type="text/javascript" src="modifiedDate.js"></script>
 	
 </head>
 <body>
