--- a/band/template.html
+++ b/band/template.html
@@ -12,7 +12,7 @@
 	<link href="css/layout.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" href="img/logo.png" /> <!-- - - - insert logo in browser tab - - - -->
 
-	<script type="text/javascript" src="modifiedDate.js"></script>
+	<script type="text/javascript" src="js/modifiedDate.js"></script>
 	
 </head>
 <body>
