--- a/band/template.html
+++ b/band/template.html
@@ -91,7 +91,7 @@
 					</a>
 				</span>
 				<span>
-					<a href="http://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+					<a href="https://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
 						<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" />
 					</a> 	
 				</span>
