--- a/band/template.html
+++ b/band/template.html
@@ -9,17 +9,17 @@
 	<meta charset="UTF-8"> <!-- <meta http-equiv="Content-Type" content="text/html;charset=utf-8" /> is equivalent, but longer -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link href="css/layout.css" rel="stylesheet" type="text/css" />
+	<link href="css/layout.css" rel="stylesheet" type="text/css">
 	<link rel="icon" href="img/logo.png" /> <!-- - - - insert logo in browser tab - - - -->
 
-	<script type="text/javascript" src="js/modifiedDate.js"></script>
+	<script src="js/modifiedDate.js"></script>
 	
 </head>
 <body>
     <div class="wrapper">
 	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
-			<img src="img/logo.png" alt="Band Logo" />
+			<img src="img/logo.png" alt="Band Logo">
 		</aside>
 		<h1 class="batala">Batala Bangor</h1>
         </header>
@@ -68,10 +68,10 @@
         <footer class="footerWrapper flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="footer_fb">
 			<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
-				<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook" />
+				<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook">
 			</a>
 		</aside>
-		<section class="footer_siteInfo flexNowrap flexColumn">
+		<article class="footer_siteInfo flexNowrap flexColumn">
 			<p class="bandInfo flexRow flexNowrap flexCenter">
 				<span id="bandWebsite">
 					<a href="index.html" class="menu">www.batalabangor.com</a>
@@ -87,20 +87,20 @@
 			<p class="siteValidation flexRow flexNowrap flexCenter">
 				<span>
 					<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-						<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict" />
+						<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict">
 					</a>
 				</span>
 				<span>
 					<a href="https://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-						<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!" />
+						<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!">
 					</a> 	
 				</span>
 			</p>
 			
-		</section>
+		</article>
 		<aside class="footer_twitter">
 			<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
-				<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter" />
+				<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter">
 			</a>
 		</aside>
         </footer>
