--- a/band/template.html
+++ b/band/template.html
@@ -16,13 +16,13 @@
 	
 </head>
 <body>
-    <div class="wrapper">
+<div class="wrapper">
 	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
 			<img src="img/logo.png" alt="Band Logo">
 		</aside>
 		<h1 class="batala">Batala Bangor</h1>
-        </header>
+	</header>
 	<nav>
 		<ul class="flexRow flexWrap flexCenter flexMiddle">
 			<li><a href="#" class="this-page">page1</a></li>
@@ -31,78 +31,79 @@
 			<li><a href="#">page4</a></li>
 		</ul>
 	</nav>
-        <main>
-            <!--Main content here-->
-            <section class="section1">
-                <header class="flexRow flexNowrap flexMiddle"><h2>Section1</h2></header>
-                <p>Welcome! 
-                    <br>My name is Chris,<!-- foaf: firstname --> 
-                    I'm a Software Engineer <!-- profession: software? -->
-                    based in Bangor, North Wales. <!-- place: Bangor --> 
-                    I graduated from the University of Liverpool in 2018
-                    with a first class degree in Software Development. 
-                    On this website, you can find out about my <a href="#background">professional background</a>, 
-                    see a <a href="showcase.html">showcase</a> of my work, 
-                    find out about the <a href="activities.html">activities</a> I enjoy, 
-                    and take a glance at my <a href="music.html">musical backgorund</a>. 
-                    <br>For more information, please <a href="mailto:chw20vvb@bangor.ac.uk?Subject=Find%20out%20more">contact me</a>.
-                </p>
-            </section>
-            <section class="section2">
-                <header class="flexRow flexNowrap flexMiddle"><h2 id="backgorund">section2</h2></header>
-                <p>section2</p>
-            </section>
-            <section class="section1">
-                <header class="flexRow flexNowrap flexMiddle"><h2>section3</h2></header>
-                <p>section3</p>
-            </section>
-            <section class="section2">
-                <header class="flexRow flexNowrap flexMiddle"><h2>section4</h2></header>
-                <p>section4</p>
-            </section>
-            <section class="section1">
-                <header class="flexRow flexNowrap flexMiddle"><h2>section5</h2></header>
-                <p>section5</p>
-            </section>
-        </main>
-        <footer class="footerWrapper flexRow flexNowrap flexCenter flexMiddle">
-		<aside class="footer_fb">
-			<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
-				<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook">
-			</a>
-		</aside>
-		<article class="footer_siteInfo flexNowrap flexColumn">
-			<p class="bandInfo flexRow flexNowrap flexCenter">
-				<span id="bandWebsite">
-					<a href="index.html" class="menu">www.batalabangor.com</a>
-				</span>
-				<span id="bandEmail"><!-- opens mail client -->
-					<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
-				</span>
+	<aside> </aside>
+	<main>
+		<!--Main content here-->
+		<section class="section1">
+			<header class="flexRow flexNowrap flexMiddle"><h2>Section1</h2></header>
+			<p>Welcome! 
+				<br>My name is Chris,<!-- foaf: firstname --> 
+				I'm a Software Engineer <!-- profession: software? -->
+				based in Bangor, North Wales. <!-- place: Bangor --> 
+				I graduated from the University of Liverpool in 2018
+				with a first class degree in Software Development. 
+				On this website, you can find out about my <a href="#background">professional background</a>, 
+				see a <a href="showcase.html">showcase</a> of my work, 
+				find out about the <a href="activities.html">activities</a> I enjoy, 
+				and take a glance at my <a href="music.html">musical backgorund</a>. 
+				<br>For more information, please <a href="mailto:chw20vvb@bangor.ac.uk?Subject=Find%20out%20more">contact me</a>.
 			</p>
-			<p class="siteInfo flexRow flexNowrap flexCenter">
-				<span id="copyright">&copy; Chris Wilton 17-07-2023</span>
-				<span id="modified">modified</span>
-			</p>
-			<p class="siteValidation flexRow flexNowrap flexCenter">
-				<span>
-					<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-						<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict">
-					</a>
-				</span>
-				<span>
-					<a href="https://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-						<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!">
-					</a> 	
-				</span>
-			</p>
-			
-		</article>
-		<aside class="footer_twitter">
-			<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
-				<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter">
-			</a>
-		</aside>
-        </footer>
-    </div>
+		</section>
+		<section class="section2">
+			<header class="flexRow flexNowrap flexMiddle"><h2 id="backgorund">section2</h2></header>
+			<p>section2</p>
+		</section>
+		<section class="section1">
+			<header class="flexRow flexNowrap flexMiddle"><h2>section3</h2></header>
+			<p>section3</p>
+		</section>
+		<section class="section2">
+			<header class="flexRow flexNowrap flexMiddle"><h2>section4</h2></header>
+			<p>section4</p>
+		</section>
+		<section class="section1">
+			<header class="flexRow flexNowrap flexMiddle"><h2>section5</h2></header>
+			<p>section5</p>
+		</section>
+	</main>
+	<footer class="footerWrapper flexRow flexNowrap flexCenter flexMiddle">
+	<aside class="footer_fb">
+		<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
+			<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook">
+		</a>
+	</aside>
+	<article class="footer_siteInfo flexNowrap flexColumn">
+		<p class="bandInfo flexRow flexNowrap flexCenter">
+			<span id="bandWebsite">
+				<a href="index.html" class="menu">www.batalabangor.com</a>
+			</span>
+			<span id="bandEmail"><!-- opens mail client -->
+				<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
+			</span>
+		</p>
+		<p class="siteInfo flexRow flexNowrap flexCenter">
+			<span id="copyright">&copy; Chris Wilton 17-07-2023</span>
+			<span id="modified">modified</span>
+		</p>
+		<p class="siteValidation flexRow flexNowrap flexCenter">
+			<span>
+				<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+					<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict">
+				</a>
+			</span>
+			<span>
+				<a href="https://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+					<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!">
+				</a> 	
+			</span>
+		</p>
+		
+	</article>
+	<aside class="footer_twitter">
+		<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
+			<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter">
+		</a>
+	</aside>
+	</footer>
+</div>
 </body>
