--- a/band/template.html
+++ b/band/template.html
@@ -16,7 +16,7 @@
 	
 </head>
 <body>
-<div class="wrapper">
+<div class="wrapper flexColumn flexMiddle">
 	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
 			<img src="img/logo.png" alt="Band Logo">
