--- a/band/template.html
+++ b/band/template.html
@@ -16,7 +16,7 @@
 	
 </head>
 <body>
-<div class="wrapper flexColumn flexMiddle">
+<div class="wrapper">
 	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
 			<img src="img/logo.png" alt="Band Logo">
@@ -32,7 +32,7 @@
 		</ul>
 	</nav>
 	<aside> </aside>
-	<main>
+	<main flexColumn flexMiddle>
 		<!--Main content here-->
 		<section class="section1">
 			<header class="flexRow flexNowrap flexMiddle"><h2>Section1</h2></header>
