--- a/band/template.html
+++ b/band/template.html
@@ -32,7 +32,7 @@
 		</ul>
 	</nav>
 	<aside> </aside>
-	<main flexColumn flexMiddle>
+	<main class="flexColumn flexMiddleclass=">
 		<!--Main content here-->
 		<section class="section1">
 			<header class="flexRow flexNowrap flexMiddle"><h2>Section1</h2></header>
