--- a/band/template.html
+++ b/band/template.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
-	<link rel="icon" href="img/logo.png" /> <!-- - - - insert logo in browser tab - - - -->
+	<link rel="icon" href="img/logo.png"> <!-- - - - insert logo in browser tab - - - -->
 
 	<script src="js/modifiedDate.js"></script>
 	
