--- a/band/template.html
+++ b/band/template.html
@@ -72,14 +72,14 @@
 		</a>
 	</aside>
 	<article class="footer_siteInfo flexNowrap flexColumn">
-		<p class="bandInfo flexRow flexNowrap flexCenter">
+		<h4 class="bandInfo flexRow flexNowrap flexCenter">
 			<span id="bandWebsite">
 				<a href="index.html" class="menu">www.batalabangor.com</a>
 			</span>
 			<span id="bandEmail"><!-- opens mail client -->
 				<a href="mailto:bookings@batalabangor.com" class="menu">bookings@batalabangor.com</a>
 			</span>
-		</p>
+		</h4>
 		<p class="siteInfo flexRow flexNowrap flexCenter">
 			<span id="copyright">&copy; Chris Wilton 17-07-2023</span>
 			<span id="modified">modified</span>
