--- a/band/template.html
+++ b/band/template.html
@@ -92,7 +92,7 @@
 			</span>
 			<span>
 				<a href="https://jigsaw.w3.org/css-validator/check/referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-					<img src="http://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!">
+					<img src="https://jigsaw.w3.org/css-validator/images/vcss" class="validator" alt="Valid CSS!">
 				</a> 	
 			</span>
 		</p>
