--- a/band/template.html
+++ b/band/template.html
@@ -87,7 +87,7 @@
 		<p class="siteValidation flexRow flexNowrap flexCenter">
 			<span>
 				<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
-					<img src="http://www.w3.org/Icons/valid-xhtml10" class="validator" alt="Valid XHTML 1.0 Strict">
+					<img src="https://www.w3.org/Icons/valid-html401" class="validator" alt="Valid HTML 4.01">
 				</a>
 			</span>
 			<span>
