--- a/band/index.html
+++ b/band/index.html
@@ -26,11 +26,11 @@
 	<nav>
 		<ul class="flexRow flexWrap flexCenter flexMiddle">
 			<li><a href="#" class="this-page">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Gallery</a></li>
-			<li><a href="#">Contact</a></li>
-            <li><a href="#">Gigs</a></li>
-            <li><a href="#">Members</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="contact.html">Contact</a></li>
+            <li><a href="gigs.html">Gigs</a></li>
+            <li><a href="members.html">Members</a></li>
 		</ul>
 	</nav>
 	<main class="flexColumn flexMiddle">
