--- a/band/about.html
+++ b/band/about.html
@@ -26,7 +26,7 @@
 	<nav>
 		<ul class="flexRow flexWrap flexCenter flexMiddle">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html" class="this-page">About</a></li>
+			<li><a href="#" class="this-page">About</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="contact.html">Contact</a></li>
       <li><a href="gigs.html">Gigs</a></li>
