--- a/band/gallery.html
+++ b/band/gallery.html
@@ -27,7 +27,7 @@
 		<ul class="flexRow flexWrap flexCenter flexMiddle">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="gallery.html" class="this-page">Gallery</a></li>
+			<li><a href="#" class="this-page">Gallery</a></li>
 			<li><a href="contact.html">Contact</a></li>
             <li><a href="gigs.html">Gigs</a></li>
             <li><a href="members.html">Members</a></li>
