--- a/band/index.html
+++ b/band/index.html
@@ -13,6 +13,7 @@
 	<link rel="icon" href="img/logo.png"> <!-- - - - insert logo in browser tab - - - -->
 
 	<script src="js/modifiedDate.js"></script>
+	<script defer src="View.js"></script>
 	
 </head>
 <body>
