--- a/band/index.html
+++ b/band/index.html
@@ -14,7 +14,7 @@
 
 	<script src="js/modifiedDate.js"></script>
 	<script defer src="View.js"></script>
-	
+	<script defer src="Controller.js"></script>
 </head>
 <body>
 <div class="wrapper">
