--- a/band/index.html
+++ b/band/index.html
@@ -13,8 +13,8 @@
 	<link rel="icon" href="img/logo.png"> <!-- - - - insert logo in browser tab - - - -->
 
 	<script src="js/modifiedDate.js"></script>
-	<script defer src="View.js"></script>
-	<script defer src="Controller.js"></script>
+	<script defer src="js/View.js"></script>
+	<script defer src="js/Controller.js"></script>
 </head>
 <body>
 <div class="wrapper">
