--- a/band/index.html
+++ b/band/index.html
@@ -74,7 +74,7 @@
 		</h4>
 		<p class="siteInfo flexRow flexNowrap flexCenter">
 			<span id="copyright">&copy; Chris Wilton 17-07-2023</span>
-			<span id="modified">modified</span>
+			<span id="modified"></span>
 		</p>
 		<p class="siteValidation flexRow flexNowrap flexCenter">
 			<span>
