--- a/band/members.html
+++ b/band/members.html
@@ -15,7 +15,7 @@
 	<script src="js/modifiedDate.js"></script>
 	
 </head>
-<body>
+<body onload="writeModifiedDate('modifiedDate')";>
 <div class="wrapper">
 	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
@@ -73,7 +73,7 @@
 		</h4>
 		<p class="siteInfo flexRow flexNowrap flexCenter">
 			<span id="copyright">&copy; Chris Wilton 17-07-2023</span>
-			<span id="modified">modified</span>
+			<span id="modifiedDate"></span>
 		</p>
 		<p class="siteValidation flexRow flexNowrap flexCenter">
 			<span>
