--- a/band/index.html
+++ b/band/index.html
@@ -60,7 +60,7 @@
 	<footer class="footerWrapper flexRow flexNowrap flexCenter flexMiddle">
 	<aside class="footer_fb">
 		<a href="https://www.facebook.com/batala.bangor" onclick="target='_blank'"> 	<!-- onclick="target='_blank'" opens the link in a new window when clicked -->
-			<img src="http://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook">
+			<img src="https://www.batalabangor.com/FB-logo.png" class="socialMedia" alt="Facebook">
 		</a>
 	</aside>
 	<article class="footer_siteInfo flexNowrap flexColumn">
@@ -78,7 +78,7 @@
 		</p>
 		<p class="siteValidation flexRow flexNowrap flexCenter">
 			<span>
-				<a href="http://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
+				<a href="https://validator.w3.org/check?uri=referer" onclick="target='_blank'"> 		<!-- open a new window when clicked -->
 					<img src="https://www.w3.org/Icons/valid-html401" class="validator" alt="Valid HTML 4.01">
 				</a>
 			</span>
@@ -92,7 +92,7 @@
 	</article>
 	<aside class="footer_twitter">
 		<a href="https://twitter.com/batalabangor" onclick="target='_blank'">		<!-- open a new window when clicked -->
-			<img src="http://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter">
+			<img src="https://www.batalabangor.com/twitter-logo.png" class="socialMedia" alt="twitter">
 		</a>
 	</aside>
 	</footer>
