--- a/band/index.html
+++ b/band/index.html
@@ -16,7 +16,7 @@
 	<script defer src="js/View.js"></script>
 	<script defer src="js/Controller.js"></script>
 </head>
-<body onload="writeModifiedDate('modifiedDate')";>
+<body onload="writeModifiedDate('modifiedDate')">
 <div class="wrapper">
 	<header class="flexRow flexNowrap flexCenter flexMiddle">
 		<aside class="logo">
