--- a/band/index.html
+++ b/band/index.html
@@ -14,6 +14,7 @@
 
 	<script src="js/modifiedDate.js"></script>
 	<script defer src="js/View.js"></script>
+    <script defer src="js/Content.js"></script>
     <script defer src="js/Model.js"></script>
 	<script defer src="js/Controller.js"></script>
 </head>
